Ultima mejora en Edit de la view
Pendiente mejorar create y delete

--- a/SuperZapatos/Views/Articles/Edit.cshtml
+++ b/SuperZapatos/Views/Articles/Edit.cshtml
@@ -1,10 +1,16 @@
 ﻿@model Modelos.articles
 
+@{
+    ViewBag.Title = "Edit";
+}
 
-@using (Html.BeginForm())
+<h2>Edit</h2>
+
+
+@using (Html.BeginForm("Save", "Articles"))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>articles</h4>
         <hr />
@@ -71,6 +77,3 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
