--- a/SuperZapatos/Views/Articles/Create.cshtml
+++ b/SuperZapatos/Views/Articles/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("SaveCreate", "Home"))
+@using (Html.BeginForm("SaveCreate", "Articles"))
 {
     @Html.AntiForgeryToken()
 
@@ -75,6 +75,6 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
+}*@
