--- a/SuperZapatos/Views/Articles/Index.cshtml
+++ b/SuperZapatos/Views/Articles/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
 
 </div>
-
+@Html.ActionLink("Create New", "Create")
 <div class="row">
     <div class="table-responsive">
         <table class="table table-hover">
