--- a/SuperZapatos/Views/Shared/_Layout.cshtml
+++ b/SuperZapatos/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Aplicacion Super Zapatos MVC", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Aplicacion Super Zapatos MVC", "Index", "Articles", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
